# order-service

./: .env  .gitignore  .readme.md.swp  Cargo.toml  log4rs.yaml  readme.md  request  test_request
migrations/: 0001_orders.sql
src/: .main.rs.swp  database.rs  main.rs  model.rs
