[package]
name = "order_service_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
axum = "0.7.5"
axum-server = "0.7.1"
tokio = {version = "1.12", features = ["full"]}

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.128"

# sql
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"]}

# env
dotenvy = "0.15.7"

# log
log = "0.4"
log4rs = "1.2" 